--- a/demo/jQuery实现模拟滚动条效果.html
+++ b/demo/jQuery实现模拟滚动条效果.html
@@ -3,7 +3,7 @@
 <head>
 	<meta charset="utf-8">
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
-	<title>jQuery实现模拟滚动条效果；</title>
+	<title>jQuery实现模拟滚动条效果!</title>
 	<style>
 *{padding:0;margin:0;font:14px/1.8 "microsoft yahei";-moz-user-select:none;/**禁止选中文字*/}
 .box{width:600px;height:600px;position:relative;border:1px solid #d98d9d;margin:0 auto;overflow:hidden;}
