--- a/demo/jQuery+css3选项卡插件/index.html
+++ b/demo/jQuery+css3选项卡插件/index.html
@@ -7,7 +7,7 @@
 	<style>
 	*{padding:0; margin: 0; list-style: none;font-family: "microsoft yahei"; }
 	.tab{width: 1000px;margin: 0 auto;border:1px solid #188eee; }
-	.tabTitle{height: 40px;box-shadow:0px -1px 0px #188eee inset;margin: 0 10px;margin-top: 10px}
+	.tabTitle{height: 40px;box-shadow:0px -1px 0px #188eee inset;margin: 0 10px;margin-top: 10px;}
 	.tabTitle span{display: block;display: inline-block;height: 40px;line-height: 40px;padding: 0 20px;background: #505050;color: #fff;float: left;margin-right: 10px;cursor: pointer;}
 	.tabTitle span.active{background: #188eee;color: #FFF;}
 	.tabContent{overflow: hidden;}
