--- a/demo/jQuery弹出框插件/弹出框.html
+++ b/demo/jQuery弹出框插件/弹出框.html
@@ -6,7 +6,7 @@
 		<title>jQuery弹出框插件</title>
 		<style>
 		*{padding:0;margin:0;list-style:none;font:14px/1.8 "microsoft yahei";}
-		body{background:#505050}
+		body{background:#505050;}
 		.btn{margin:0 auto;width:80px; }
 		.btn a{display:block;text-decoration:none;background:red;color:#fff;text-align:center;height:40px;line-height:40px;}
 		.box{width:500px;height:100px;border:1px solid #ccc;padding:10px;display:none;}
