--- a/demo/Calendar .html
+++ b/demo/Calendar .html
@@ -6,7 +6,7 @@
 	<title>jQuery日历插件版</title>
 	<style>
 	*{margin:0;padding:0;font:14px/1.8 "Helvetica Neue","microsoft yahei";}
-	ul,li{list-style:none;}
+	ul,li{list-style:none}
 	#week{width:350px;height:295px;border:1px solid #ccc;}
 	#week h1{font-size:16px;overflow:hidden;height:40px;line-height:40px;border-bottom: 1px solid #c9d9d9;}
 	#week h1 span{float:left;text-align:center;display: inline-block; height: 40px;line-height: 40px;}
