--- a/demo/flex/flex-2.html
+++ b/demo/flex/flex-2.html
@@ -1,84 +1,133 @@
 <!DOCTYPE html>
-<html lang="en">
+<html >
 <head>
 	<meta charset="UTF-8">
-	<title>Document</title>
+	<title>flex兼容写法</title>
 	<meta name="viewport" content="width=device-width,initial-scale=1.0,minimum-scale=1.0,maximum-scale=1.0,user-scalable=no">
+	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/meyer-reset/2.0/reset.min.css">
+	
 	<style>
-	*{padding: 0;margin: 0;list-style: none;}
-	.box{text-overflow: ellipsis;width: 300px;border:1px solid red;padding: 10px; overflow: hidden; white-space: nowrap;}
-	ul{width: 90%;border:1px solid #ccc;padding: 10px;margin: 0 auto;}
-	ul li{border-bottom: 1px dashed #dcc;padding: 10px 0;}
-	.p2{flex:3;}
-  .flex-h{display:-webkit-box;display:box;display:-webkit-flex;display:flex;-webkit-box-orient:horizontal;-webkit-flex-direction:row;flex-direction:row;}
-  .flex-hc{-webkit-box-pack:center;-webkit-justify-content:center;justify-content:center;}
-  .flex-v{display:-webkit-box;display:box;display:-webkit-flex;display:flex;-webkit-box-orient:vertical;-webkit-flex-direction:column;flex-direction:column;}
-  .flex-vc{-webkit-box-align:center;-webkit-align-items:center;align-items:center;}
-  .flex1{-webkit-box-flex:2;-webkit-flex:2;flex:2; }
-  .flex3{-webkit-box-flex:3;-webkit-flex:3;flex:3;}
-  .flex-1{-webkit-box-ordinal-group:1;-webkit-order:1;order:1;}
-  .flex-2{-webkit-box-ordinal-group:2;-webkit-order:2;order:2;}
-  .flex-3{-webkit-box-ordinal-group:3;-webkit-order:3;order:3;}
+		.mb30 {
+			margin-bottom: 30px;
+		}
+		.h50 {
+			height: 50px;
+		}
+		.w50 {
+			width: 50px;
+		}
+		.h100 {
+			height: 100px;
+		}
+		.w100 {
+			width: 100px;
+		}
+		.bdr {
+			border: 2px solid #eee;
+		}
+		.bg1 {
+			background-color: #0B86D6;
+		}
+		.bg2 {
+			background-color: #CD4A00;
+		}
+		.bg3 {
+			background-color: #18414B;
+		}
+		.bg1 {
+			background-color: #57B892;
+		}
+		.flex-h {
+			display: -webkit-box;
+			display: box;
+			display: -webkit-flex;
+			display: flex;
+			-webkit-box-orient: horizontal;
+			-webkit-flex-direction: row;
+			flex-direction: row;
+		}
+		.flex-hc {
+			-webkit-box-pack: center;
+			-webkit-justify-content: center;
+			justify-content: center;
+		}
+		.flex-v {
+			display: -webkit-box;
+			display: box;
+			display: -webkit-flex;
+			display: flex;
+			-webkit-box-orient: vertical;
+			-webkit-flex-direction: column;
+			flex-direction: column;
+		}
+		.flex-vc {
+			-webkit-box-align: center;
+			-webkit-align-items: center;
+			align-items: center;
+		}
+		.flex1 {
+			-webkit-box-flex: 1;
+			-webkit-flex: 1;
+			flex: 1;
+		}
+		.flex-1 {
+			-webkit-box-ordinal-group: 1;
+			-webkit-order: 1;
+			order: 1;
+		}
+		.flex-2 {
+			-webkit-box-ordinal-group: 2;
+			-webkit-order: 2;
+			order: 2;
+		}
+		.flex-3 {
+			-webkit-box-ordinal-group: 3;
+			-webkit-order: 3;
+			order: 3;
+		}
 	</style>
+	
 </head>
-<body>
-	<ul >
-		<li>
-			<p class="p1">item1</p>
-			<p class="p2">哈哈哈，我的意思是不是不保证最新，而是可以保证绝对不是最新的，而且是2012年以前的了 //@asd2340138：我的介绍里面写了，数据不保证是最新的，只是写一个例子出来，是想分享一下里面的代码逻辑，如果真要自己用的话，那就只有自己找找合适的数据文件，再改改代码也能用</p>
-		</li>
-		<li>
-			<p class="p1">item2</p>
-			<p class="p2">content2</p>
-		</li>
-		<li>
-			<p class="p1">item3</p>
-			<p class="p2">content3</p>
-		</li>
-		<li>
-			<p class="p1">item4</p>
-			<p class="p2">content4</p>
-		</li>
-		<li>
-			<p class="p1">item5</p>
-			<p class="p2">content5</p>
-		</li>
-		<li>
-			<p class="p1">item6</p>
-			<p class="p2">content6</p>
-		</li>
-		<li>
-			<p class="p1">item7</p>
-			<p class="p2">content7</p>
-		</li>
-		<li>
-			<p class="p1">item8</p>
-			<p class="p2">content8</p>
-		</li>
-		<li>
-			<p class="p1">item9</p>
-			<p class="p2">content9</p>
-		</li>
-		<li>
-			<p class="p1">item10</p>
-			<p class="p2">content10</p>
-		</li>
-	</ul>
-	<script>
-		[].forEach.call(document.querySelectorAll("li"), function(element, index) {
-			element.classList.add("flex-h");
-
-		});
-		[].forEach.call(document.querySelectorAll(".p1"), function(element, index) {
-			element.classList.add("flex1");
-			element.classList.add("flex-vc");
-			element.classList.add("flex-h");
-		});
-		[].forEach.call(document.querySelectorAll(".p2"), function(element, index) {
-			element.classList.add("flex3");
- 
-		});
-
-	</script>
+<body>	
+	<h3>水平均分</h3>
+	<hr/>
+	<div class="h100 flex-h bdr mb30">
+		<div class="bg1 flex1"></div>
+		<div class="bg2 flex1"></div>
+		<div class="bg3 flex1"></div>
+	</div>
+	<h3>垂直均分</h3>
+	<hr/>
+	<div class="h100 flex-v bdr mb30">
+		<div class="bg2 flex1"></div>
+		<div class="bg3 flex1"></div>
+		<div class="bg1 flex1"></div>
+	</div>
+	<h3>水平居中对齐</h3>
+	<hr/>
+	<div class="h100 flex-h flex-hc bdr mb30">
+		<div class="bg2 w50"></div>
+		<div class="bg3 w50"></div>
+		<div class="bg1 w50"></div>
+	</div>
+	<h3>ORDER自定义排序</h3>
+	<hr/>
+	<div class="h100 flex-h flex-hc bdr mb30">
+		<div class="bg2 w50 flex-3"></div>
+		<div class="bg3 w50 flex-1"></div>
+		<div class="bg1 w50 flex-2"></div>
+	</div>
+	<h3>垂直居中对齐</h3>
+	<hr/>
+	<div class="flex-v flex-vc bdr mb30">
+		<div class="bg3 w100 h50"></div>
+		<div class="bg2 w100 h50"></div>
+		<div class="bg1 w100 h50"></div>
+	</div>
+	<h3>水平垂直居中</h3>
+	<hr/>
+	<div class="h100 flex-h flex-vc flex-hc bdr mb30">
+		<div class="bg3 w100 h50"></div>
+	</div>	
 </body>
 </html>
