--- a/PhotoSwipe/index.html
+++ b/PhotoSwipe/index.html
@@ -20,7 +20,7 @@
 	</head>
 	<body>
 		<h1>PhotoSwipe演示</h1>
-		<div class="lightgallery" data-pswp-uid="1" id="PhotoSwipe-demo">
+		<div class="lightgallery" data-pswp-uid="1" id="photoSwipe-demo">
 			<figure>
 				<div>
 					<a href="images/1.jpg" data-size="1600x1066"><img src="images/1.jpg"></a>
@@ -45,13 +45,13 @@
 
 
 		<!-- 启动代码 -->
-		<script src="js/Photoswipe-html.js"></script>
+		<script src="js/photoswipe-html.js"></script>
 		<script src="js/photoswipe.min.js"></script>
 		<script src="js/photoswipe-ui-default.min.js"></script>
-		<script src="js/Photoswipe-demo.js"></script>
+		<script src="js/photoswipe-demo.js"></script>
 		<script>
 			// 调用图片画廊		
-			initPhotoSwipeFromDOM('#PhotoSwipe-demo');		
+			initPhotoSwipeFromDOM('#photoSwipe-demo');		
 		</script>
 	</body>
 </html>
