--- a/PhotoSwipe/index.html
+++ b/PhotoSwipe/index.html
@@ -42,7 +42,7 @@
 
 <body>
     <h1>PhotoSwipe演示</h1>
-    <div class="lightgallery" data-pswp-uid="1" id="photoSwipe-demo">
+    <div class="lightgallery" data-pswp-uid="1" id="PhotoSwipe-demo">
         <figure>
             <div>
                 <a href="images/1.jpg" data-size="1600x1066"><img src="images/1.jpg"></a>
@@ -67,11 +67,11 @@
     <!-- 启动代码 -->
 	<script type="text/javascript" src="js/photoswipe.min.js"></script>
 	<script type="text/javascript" src="js/photoswipe-ui-default.min.js"></script>
-	<script type="text/javascript" src="js/photoswipe-html.js"></script>
-	<script type="text/javascript" src="js/photoswipe-demo.js"></script>
+	<script type="text/javascript" src="js/Photoswipe-html.js"></script>
+	<script type="text/javascript" src="js/Photoswipe-demo.js"></script>
     <script>
     // 调用图片画廊		
-    initPhotoSwipeFromDOM('#photoSwipe-demo');
+    initPhotoSwipeFromDOM('#PhotoSwipe-demo');
     </script>
 </body>
 
