--- a/dropload/index.html
+++ b/dropload/index.html
@@ -4,6 +4,7 @@
 	<meta charset="UTF-8">
 	<title>移动端下拉刷新、上拉加载、按需加载</title>
 	<style type="text/css">
+		*{padding: 0;margin: 0;list-style:none;}
 		.menu{width: 200px;}
 		.menu a{display: block;color: #333;text-decoration: none;border: 1px dashed #333;padding: 10px 0;margin: 15px;padding-left: 10px;}
 	</style>
