--- a/PhotoSwipe/index.html
+++ b/PhotoSwipe/index.html
@@ -1,78 +1,18 @@
-<!doctype html>
-<html>
-
+<!DOCTYPE html>
+<html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1,user-scalable=0">
-    <title>PhotoSwipe演示</title>
-    <!-- Core CSS file -->
-    <style>
-    * {
-        padding: 0;
-        margin: 0;
-        list-style: none;
-    }
-
-    h1 {
-        padding: 20px 2%;
-        font-size: 20px;
-        padding-bottom: 0
-    }
-
-    .lightgallery {
-        border: 1px solid #d9d9d9;
-        padding: 20px 10px;
-        margin: 2%;
-        display: flex;
-        justify-content: space-between;
-    }
-
-    .lightgallery figure {
-        margin: 0 10px;
-    }
-
-    .lightgallery figure img {
-        max-width: 100%;
-    }
-    </style>
-    <link rel="stylesheet" href="css/photoswipe.css">
-    <link rel="stylesheet" href="default-skin/default-skin.css">
-   	<script type="text/javascript" src="js/jquery-1.11.0.min.js"></script>
+	<meta charset="UTF-8">
+	<title>PhotoSwipe</title>
+	<style type="text/css">
+        *{padding: 0;margin: 0;list-style:none;}
+		.menu{width: 450px;}
+		.menu a{display: block;color: #333;text-decoration: none;border: 1px dashed #333;padding: 10px 0;margin: 15px;padding-left: 10px;}
+	</style>
 </head>
-
 <body>
-    <h1>PhotoSwipe演示</h1>
-    <div class="lightgallery" data-pswp-uid="1" id="PhotoSwipe-demo">
-        <figure>
-            <div>
-                <a href="images/1.jpg" data-size="1600x1066"><img src="images/1.jpg"></a>
-            </div>
-        </figure>
-        <figure>
-            <div>
-                <a href="images/2.jpg" data-size="1600x1066"><img src="images/2.jpg"></a>
-            </div>
-        </figure>
-        <figure>
-            <div>
-                <a href="images/3.jpg" data-size="1600x1066"><img src="images/3.jpg"></a>
-            </div>
-        </figure>
-        <figure>
-            <div>
-                <a href="images/4.jpg" data-size="1600x1066"><img src="images/4.jpg"></a>
-            </div>
-        </figure>
-    </div>
-    <!-- 启动代码 -->
-	<script type="text/javascript" src="js/photoswipe.min.js"></script>
-	<script type="text/javascript" src="js/photoswipe-ui-default.min.js"></script>
-	<script type="text/javascript" src="js/Photoswipe-html.js"></script>
-	<script type="text/javascript" src="js/Photoswipe-demo.js"></script>
-    <script>
-    // 调用图片画廊		
-    initPhotoSwipeFromDOM('#PhotoSwipe-demo');
-    </script>
+	<div class="menu">
+		<a href="default.html">官方默认效果</a>
+		<a href="init-from-dom.html">整合之后的DEMO</a>
+	</div>
 </body>
-
 </html>
