--- a/bird/index.html
+++ b/bird/index.html
@@ -4,6 +4,7 @@
 	<meta charset="UTF-8">
 	<title>多种方法实现H5网页GIF图片动画效果；</title>
 	<style type="text/css">
+		*{padding: 0;margin: 0;list-style:none;}
 		.menu{width: 450px;}
 		.menu a{display: block;color: #333;text-decoration: none;border: 1px dashed #333;padding: 10px 0;margin: 15px;padding-left: 10px;}
 	</style>
