--- a/PhotoSwipe/default.html
+++ b/PhotoSwipe/default.html
@@ -4,6 +4,8 @@
 <head>
     <meta charset="UTF-8">
     <title>官方默认效果</title>
+    <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
+    <meta name="viewport" content="width=device-width, user-scalable=no, minimum-scale=1.0, maximum-scale=1.0">
     <link rel="stylesheet" type="text/css" href="dist/photoswipe.css">
     <link rel="stylesheet" type="text/css" href="dist/default-skin/default-skin.css">
     <!--[if lt IE 9]>
