--- a/PhotoSwipe/index.html
+++ b/PhotoSwipe/index.html
@@ -3,16 +3,19 @@
 <head>
 	<meta charset="UTF-8">
 	<title>PhotoSwipe</title>
+	<meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
+	<meta name="viewport" content="width=device-width, user-scalable=no, minimum-scale=1.0, maximum-scale=1.0">
 	<style type="text/css">
         *{padding: 0;margin: 0;list-style:none;}
-		.menu{width: 450px;}
-		.menu a{display: block;color: #333;text-decoration: none;border: 1px dashed #333;padding: 10px 0;margin: 15px;padding-left: 10px;}
+		.menu{padding: 2%;}
+		.menu a{display: block;color: #333;text-decoration: none;border: 1px dashed #333;padding: 10px 0; padding-left: 10px;margin-bottom: 15px;}
 	</style>
 </head>
 <body>
 	<div class="menu">
 		<a href="default.html">官方默认效果</a>
 		<a href="init-from-dom.html">整合之后的DEMO</a>
+		<a href="img_auto_size.html">图片自适应大小</a>
 	</div>
 </body>
 </html>
