--- a/PhotoSwipe/index.html
+++ b/PhotoSwipe/index.html
@@ -7,8 +7,8 @@
 	<meta name="viewport" content="width=device-width, user-scalable=no, minimum-scale=1.0, maximum-scale=1.0">
 	<style type="text/css">
         *{padding: 0;margin: 0;list-style:none;}
-		.menu{padding: 2%;}
-		.menu a{display: block;color: #333;text-decoration: none;border: 1px dashed #333;padding: 10px 0; padding-left: 10px;margin-bottom: 15px;}
+		.menu{width: 400px;}
+		.menu a{display: block;color: #333;text-decoration: none;border: 1px dashed #333;padding: 10px 0;margin: 15px;padding-left: 10px;}
 	</style>
 </head>
 <body>
