--- a/css3-gradient/index.html
+++ b/css3-gradient/index.html
@@ -3,7 +3,7 @@
 
 <head>
     <meta charset="UTF-8">
-    <title>css3渐变demo</title>
+    <title>css3渐变Demo</title>
     <style type="text/css">
     .box {
         width: 300px;
