--- a/css3-gradient/index.html
+++ b/css3-gradient/index.html
@@ -15,8 +15,7 @@
 	<div class="menu">
 		<a href="linear-gradient-1.html">简单线性渐变</a>
 		<a href="linear-gradient-2.html">复杂线性渐变</a>
-		<a href="radial-gradient-1.html">简单径向渐变</a>
-		<a href="radial-gradient-2.html">复杂径向渐变</a>
+		<a href="radial-gradient-1.html">径向渐变</a>
 	</div>
 </body>
 </html>
