--- a/css3-gradient/linear-gradient-1.html
+++ b/css3-gradient/linear-gradient-1.html
@@ -5,18 +5,24 @@
     <meta charset="UTF-8">
     <title>css3渐变Demo</title>
     <style type="text/css">
+    * {
+        font-family: consolas;
+        font-size: 14px;
+    }
+
     .box {
         width: 300px;
         height: 300px;
         border: 1px solid #d9d9d9;
         background: linear-gradient(red, blue);
+        margin-bottom: 10px;
     }
     </style>
 </head>
 
 <body>
     <div class="box"></div>
-    <select id="select" onchange="change(this)">
+    <span>当前角度：</span><select id="select" onchange="change(this)">
     </select>
     <script type="text/javascript">
     var _box = document.querySelector(".box"),
