--- a/css3-gradient/linear-gradient-2.html
+++ b/css3-gradient/linear-gradient-2.html
@@ -31,11 +31,9 @@
 <body>
     <div class="box"></div>
     <span>角度：</span>
-    <select id="select_1" onchange="changeDeg(this)">
-    </select>
+    <select id="select_1" onchange="changeDeg(this)"></select>
     <span>渐变数值：</span>
-    <select id="select_2" onchange="changeValue(this)">
-    </select>
+    <select id="select_2" onchange="changeValue(this)"></select>
     <pre id="text"></pre>
     <script type="text/javascript">
     var _box = document.querySelector(".box"),
