--- a/css3-gradient/radial-gradient-1.html
+++ b/css3-gradient/radial-gradient-1.html
@@ -17,12 +17,20 @@
         background: radial-gradient(red 20%, green, 20%, green 40%, #f90 40%, #f90 60%, blue 60%);
         margin-bottom: 10px;
     }
+
+    #text {
+        background: #fff;
+        padding: 10px;
+        border: 1px dashed #adadad;
+        color: #333;
+        display: block;
+    }
     </style>
 </head>
 
 <body>
     <div class="box"></div>
-    </script>
+    <pre id="text">当前渐变样式为：radial-gradient(red 20%, green, 20%, green 40%, #f90 40%, #f90 60%, blue 60%);</pre>
 </body>
 
 </html>
