--- a/css3-gradient/radial-gradient-1.html
+++ b/css3-gradient/radial-gradient-1.html
@@ -30,7 +30,7 @@
 
 <body>
     <div class="box"></div>
-    <pre id="text">当前渐变样式为：radial-gradient(red 20%, green, 20%, green 40%, #f90 40%, #f90 60%, blue 60%);</pre>
+    <pre id="text">当前渐变样式为：radial-gradient(red 20%, green, 20%, green 40%, #f90 40%, #f90 60%, blue 60%)</pre>
 </body>
 
 </html>
