--- a/css3-clip-path.html
+++ b/css3-clip-path.html
@@ -64,7 +64,7 @@
 
 <body>
     <div class="box">
-        <img src="http://image.youzhan.org/d/dd/2de797545de56274f03a5920eb3a1.jpg" alt="">
+        <img src='http://i2.bvimg.com/508767/d69bb1adbcd50efa.jpg'>
     </div>
 </body>
 
