--- a/css3-clip.html
+++ b/css3-clip.html
@@ -33,10 +33,11 @@
 
         }
 
-        .box img {
+        .box div {
             display: block;
             max-width: 100%;
             height: 100%;
+            background: #f50;
 
         }
 
@@ -64,7 +65,7 @@
 
 <body>
     <div class="box">
-        <img src='http://i2.bvimg.com/508767/d69bb1adbcd50efa.jpg'>
+        <div></div>
     </div>
 </body>
 
