--- a/css3-clip-path.html
+++ b/css3-clip-path.html
@@ -1,3 +1,4 @@
+
 <!DOCTYPE html>
 <html lang="en">
 
@@ -62,7 +63,7 @@
 
 <body>
     <div class="box">
-        <img class="img" src="https://cdn.files.qdfuns.com/video/cover/201805/18/171339qzdurmbr02xhda1m.jpg!/both/600x331/clip/600x331a0a0" alt="">
+        <img class="img" src="https://c-jun.coding.me/some-demos/PhotoSwipe/images/9.jpg" alt="">
     </div>
     <div class="setion">
         <span>clip-path:</span>
