--- a/css3-gradient/index.html
+++ b/css3-gradient/index.html
@@ -16,6 +16,7 @@
 		<a href="linear-gradient-1.html">简单线性渐变</a>
 		<a href="linear-gradient-2.html">复杂线性渐变</a>
 		<a href="radial-gradient-1.html">径向渐变</a>
+		<a href="src/index.html">文字省略及渐变</a>
 	</div>
 </body>
 </html>
