--- a/css3-clip-path.html
+++ b/css3-clip-path.html
@@ -63,7 +63,7 @@
 
 <body>
     <div class="box">
-        <img class="img" src="https://c-jun.coding.me/some-demos/PhotoSwipe/images/9.jpg" alt="">
+        <img class="img" src="http://jonechen1127.github.io/some-demos/PhotoSwipe/images/9.jpg" alt="">
     </div>
     <div class="setion">
         <span>clip-path:</span>
