Update and rename css3-loading to css3-loading.html

--- a/css3-loading.html
+++ b/css3-loading.html
@@ -16,6 +16,9 @@
         position: absolute;
         overflow: hidden;
         animation: spin 2.2s linear 0s infinite;
+        left: 50%;
+        top: 50%;
+        transform: translate(-50%, -50%);
     }
 
     .loading>div {
